--- a/Vigenere Cipher/Index.html
+++ b/Vigenere Cipher/Index.html
@@ -56,6 +56,24 @@
 
                 });
 
+                document.getElementById("analyze_ciphertext").addEventListener("click", function (e)
+                {
+                    e.preventDefault();
+                    e.stopPropagation();
+
+                    var text = document.getElementById("ciphertext").value;
+                    var histogram = createHistogramValues(text);
+                    document.getElementById("chart_ciphertext").innerHTML = createHTMLTable(histogram);
+                });
+
+                document.getElementById("decrypt").addEventListener("click", function (e) {
+                    e.preventDefault();
+                    e.stopPropagation();
+
+                    var plaintext = document.getElementById("ciphertext").value;
+                    var key = document.getElementById("decryptkey").value;
+                    document.getElementById("ciphertext").innerHTML = decryptVigenere(plaintext, key);
+                });
 
                 function createHistogramValues (text){
                     var histogram_prepare = [];
@@ -86,6 +104,63 @@
                         html += "<td>" + histogram[key] + "</td>";
                         html += "</tr>"
                     }
+                    html += "</table>";
+                    return html
+                }
+
+                function createVigenere(input, key){
+                    var output = "";
+                    for (var i = 0, j = 0; i < input.length; i++) {
+                        var char = input[i];
+                        
+                        if (char.match(/[a-z]/i)) {
+                            var c = input.charCodeAt(i);
+                            var key_char_shift = key[j % key.length].charCodeAt(0);
+
+                            if ((c >= 65) && (c <= 90)) {
+                                output += String.fromCharCode((c - 65 + key_char_shift - 65) % 26 + 65);
+                                j++;
+                            }
+                            else if ((c >= 97) && (c <= 122)) {
+                                output += String.fromCharCode((c - 97 + key_char_shift - 97) % 26 + 97);
+                                j++;
+                            }
+                        }
+                    }
+                    return output;
+                }
+
+                function decryptVigenere(input, key) {
+                    var output = "";
+                    for (var i = 0, j = 0; i < input.length; i++) {
+                        var char = input[i];
+                        
+                        if (char.match(/[a-z]/i)) {
+                            var cr = parseInt(input.charCodeAt(i));
+
+                            if ((cr >= 65) && (cr <= 90)) {
+                                var c = parseInt(cr - 65);
+                                var key_char_shift = parseInt(key[i].charCodeAt(0) - 65);
+                                var new_char_position = (c - key_char_shift) % 26;
+                                if (new_char_position < 0) {
+                                    new_char_position += 26;
+                                }
+                                output += String.fromCharCode(new_char_position + 65) ;
+                                j++;
+                            }
+                            else if ((c >= 97) && (c <= 122)) {
+                                var c = parseInt(cr - 97);
+                                var key_char_shift = parseInt(key[j % key.length].charCodeAt(0) - 97);
+                                var new_char_position = (c - key_char_shift) % 26;
+                                if (new_char_position < 0) {
+                                    new_char_position += 26;
+                                }
+                                output += String.fromCharCode(new_char_position + 97) ;
+                                j++;
+                            }
+                        }
+                    }
+                    return output;
                 }
 
             </script>
